--- a/jt-web/src/main/webapp/JSONP.html
+++ b/jt-web/src/main/webapp/JSONP.html
@@ -15,7 +15,7 @@
                 jsonpCallback: "hello",  	// 指定回调函数名称
                 success: function (data) { 	// data经过jQuery封装返回就是json串
                     alert(data.id);
-                    alert(data.name);
+                    alert(data.password);
                     //转化为字符串使用
                     //var obj = eval("("+data+")");
                     //alert(obj.name);
